@@ -16,15 +16,14 @@ import java.util.Comparator;
 import java.util.Deque;
 import java.util.List;
 import java.util.Locale;
-import java.util.Objects;
 import java.util.Optional;
 import java.util.regex.Pattern;
-import java.util.stream.Collectors;
 import java.util.stream.Stream;
 
 import org.jabref.logic.FilePreferences;
 import org.jabref.logic.citationkeypattern.BracketedPattern;
 import org.jabref.logic.layout.format.RemoveLatexCommandsFormatter;
+import org.jabref.logic.os.OS;
 import org.jabref.logic.util.StandardFileType;
 import org.jabref.model.database.BibDatabase;
 import org.jabref.model.database.BibDatabaseContext;
@@ -32,6 +31,7 @@ import org.jabref.model.entry.BibEntry;
 import org.jabref.model.entry.LinkedFile;
 import org.jabref.model.entry.field.StandardField;
 
+import org.jspecify.annotations.NonNull;
 import org.slf4j.Logger;
 import org.slf4j.LoggerFactory;
 
@@ -49,6 +49,9 @@ public class FileUtil {
     private static final String ELLIPSIS = "...";
     private static final int ELLIPSIS_LENGTH = ELLIPSIS.length();
     private static final RemoveLatexCommandsFormatter REMOVE_LATEX_COMMANDS_FORMATTER = new RemoveLatexCommandsFormatter();
+    private static final String CYGDRIVE_PREFIX = "/cygdrive/";
+    private static final String MNT_PREFIX = "/mnt/";
+    private static final Pattern ROOT_DRIVE_PATTERN = Pattern.compile("^/[a-zA-Z]/.*");
 
     /**
      * MUST ALWAYS BE A SORTED ARRAY because it is used in a binary search
@@ -121,7 +124,7 @@ public class FileUtil {
         if (nameWithoutExtension.length() > MAXIMUM_FILE_NAME_LENGTH) {
             Optional<String> extension = getFileExtension(fileName);
             String shortName = nameWithoutExtension.substring(0, MAXIMUM_FILE_NAME_LENGTH - extension.map(s -> s.length() + 1).orElse(0));
-            LOGGER.info("Truncated the too long filename '%s' (%d characters) to '%s'.".formatted(fileName, fileName.length(), shortName));
+            LOGGER.info("Truncated the too long filename '{}' ({}} characters) to '{}'.", fileName, fileName.length(), shortName);
             return extension.map(s -> shortName + "." + s).orElse(shortName);
         }
 
@@ -136,35 +139,29 @@ public class FileUtil {
      *
      * @param path      the path to add the extension to
      * @param extension the extension to add
-     * @return the with the modified file name
+     * @return the modified file name
      */
     public static Path addExtension(Path path, String extension) {
         return path.resolveSibling(path.getFileName() + extension);
     }
 
-    /**
-     * Looks for the unique directory, if any, different to the provided paths
-     *
-     * @param paths List of paths as Strings
-     * @param comparePath The to be tested path
-     */
+    /// Looks for the shortest unique path of the parent directory in the list of paths
+    ///
+    /// @param paths       List of paths as Strings
+    /// @param comparePath The to be tested path
+    /// @return Optional.empty() if the paths are disjoint
     public static Optional<String> getUniquePathDirectory(List<String> paths, Path comparePath) {
-        String fileName = comparePath.getFileName().toString();
-
-        List<String> uniquePathParts = uniquePathSubstrings(paths);
-        return uniquePathParts.stream()
-                              .filter(part -> comparePath.toString().contains(part)
-                                              && !part.equals(fileName) && part.contains(File.separator))
-                              .findFirst()
-                              .map(part -> part.substring(0, part.lastIndexOf(File.separator)));
+        // Difference to getUniquePathFragment: We want the parent directory, so we cut off the last path fragment
+        return getUniquePathFragment(paths, comparePath)
+                .filter(part -> part.contains(File.separator))
+                .map(part -> part.substring(0, part.lastIndexOf(File.separator)));
     }
 
-    /**
-     * Looks for the shortest unique path of the in a list of paths
-     *
-     * @param paths List of paths as Strings
-     * @param comparePath The to be shortened path
-     */
+    /// Looks for the shortest unique path in the list of paths
+    ///
+    /// @param paths       List of paths as Strings
+    /// @param comparePath The to be shortened path
+    /// @return Shortest unique path fragment (if exists) - Optional.empty() if the paths are disjoint
     public static Optional<String> getUniquePathFragment(List<String> paths, Path comparePath) {
         return uniquePathSubstrings(paths).stream()
                                           .filter(part -> comparePath.toString().contains(part))
@@ -220,7 +217,7 @@ public class FileUtil {
      * @param pathToSourceFile      Path Source file
      * @param pathToDestinationFile Path Destination file
      * @param replaceExisting       boolean Determines whether the copy goes on even if the file exists.
-     * @return boolean Whether the copy succeeded, or was stopped due to the file already existing.
+     * @return boolean Whether the copy succeeded or was stopped due to the file already existing.
      */
     public static boolean copyFile(Path pathToSourceFile, Path pathToDestinationFile, boolean replaceExisting) {
         // Check if the file already exists.
@@ -256,13 +253,38 @@ public class FileUtil {
         if (!file.isAbsolute()) {
             return file;
         }
+        Optional<Path> realFileOpt = toRealPath(file);
 
         for (Path directory : directories) {
             if (file.startsWith(directory)) {
                 return directory.relativize(file);
             }
+
+            if (realFileOpt.isPresent()) {
+                Optional<Path> realDirOpt = toRealPath(directory);
+                if (realDirOpt.isPresent()) {
+                    Path realFile = realFileOpt.get();
+                    Path realDir = realDirOpt.get();
+                    if (realFile.startsWith(realDir)) {
+                        return realDir.relativize(realFile);
+                    }
+                }
+            }
         }
         return file;
+    }
+
+    private static Optional<Path> toRealPath(Path path) {
+        if (Files.exists(path)) {
+            try {
+                return Optional.of(path.toRealPath());
+            } catch (IOException e) {
+                LOGGER.warn("Could not resolve real path for {}", path, e);
+                return Optional.empty();
+            }
+        } else {
+            return Optional.of(path.toAbsolutePath());
+        }
     }
 
     /**
@@ -285,7 +307,7 @@ public class FileUtil {
         List<Path> fileDirectories = databaseContext.getFileDirectories(filePreferences);
 
         return entries.stream()
-                      .map(entry -> {
+                      .peek(entry -> {
                           if (entry.hasField(StandardField.FILE)) {
                               List<LinkedFile> updatedLinkedFiles = entry.getFiles().stream().map(linkedFile -> {
                                   if (!linkedFile.isOnlineLink()) {
@@ -296,25 +318,21 @@ public class FileUtil {
                               }).toList();
                               entry.setFiles(updatedLinkedFiles);
                           }
-                          return entry;
                       }).toList();
     }
 
     /**
      * Returns the list of linked files. The files have the absolute filename
      *
-     * @param bes      list of BibTeX entries
+     * @param entries      list of BibTeX entries
      * @param fileDirs list of directories to try for expansion
      * @return list of files. May be empty
      */
-    public static List<Path> getListOfLinkedFiles(List<BibEntry> bes, List<Path> fileDirs) {
-        Objects.requireNonNull(bes);
-        Objects.requireNonNull(fileDirs);
-
-        return bes.stream()
-                  .flatMap(entry -> entry.getFiles().stream())
-                  .flatMap(file -> file.findIn(fileDirs).stream())
-                  .collect(Collectors.toList());
+    public static List<Path> getListOfLinkedFiles(@NonNull List<BibEntry> entries, @NonNull List<Path> fileDirs) {
+        return entries.stream()
+                      .flatMap(entry -> entry.getFiles().stream())
+                      .flatMap(file -> file.findIn(fileDirs).stream())
+                      .toList();
     }
 
     /**
@@ -325,11 +343,15 @@ public class FileUtil {
      * @param fileNamePattern the filename pattern
      * @return a suggested fileName
      */
-    public static String createFileNameFromPattern(BibDatabase database, BibEntry entry, String fileNamePattern) {
-        String targetName = BracketedPattern.expandBrackets(fileNamePattern, ';', entry, database);
+    public static Optional<String> createFileNameFromPattern(BibDatabase database, BibEntry entry, String fileNamePattern) {
+        String targetName = BracketedPattern.expandBrackets(fileNamePattern, ';', entry, database).trim();
 
-        if (targetName.isEmpty()) {
+        if (targetName.isEmpty() || "-".equals(targetName)) {
             targetName = entry.getCitationKey().orElse("default");
+        }
+
+        if ("default".equals(targetName)) {
+            return Optional.empty();
         }
 
         // Remove LaTeX commands (e.g., \mkbibquote{}) from expanded fields before cleaning filename
@@ -338,14 +360,14 @@ public class FileUtil {
         // Removes illegal characters from filename
         targetName = FileNameCleaner.cleanFileName(targetName);
 
-        return targetName;
+        return Optional.of(targetName);
     }
 
     /**
      * Determines directory name provided by an entry in a database
      *
-     * @param database        the database, where the entry is located
-     * @param entry           the entry to which the directory should be linked to
+     * @param database             the database, where the entry is located
+     * @param entry                the entry to which the directory should be linked to
      * @param directoryNamePattern the dirname pattern
      * @return a suggested dirName
      */
@@ -372,17 +394,18 @@ public class FileUtil {
     public static Optional<Path> findSingleFileRecursively(String filename, Path rootDirectory) {
         try (Stream<Path> pathStream = Files.walk(rootDirectory)) {
             return pathStream
-                             .filter(Files::isRegularFile)
-                             .filter(f -> f.getFileName().toString().equals(filename))
-                             .findFirst();
+                    .filter(Files::isRegularFile)
+                    .filter(f -> f.getFileName().toString().equals(filename))
+                    .findFirst();
         } catch (UncheckedIOException | IOException ex) {
-            LOGGER.error("Error trying to locate the file {} inside the directory {}", filename, rootDirectory);
+            LOGGER.error("Error trying to locate the file {} inside the directory {}", filename, rootDirectory, ex);
         }
         return Optional.empty();
     }
 
-    public static Optional<Path> find(final BibDatabaseContext databaseContext, String fileName, FilePreferences filePreferences) {
-        Objects.requireNonNull(fileName, "fileName");
+    public static Optional<Path> find(final BibDatabaseContext databaseContext,
+                                      @NonNull String fileName,
+                                      FilePreferences filePreferences) {
         return find(fileName, databaseContext.getFileDirectories(filePreferences));
     }
 
@@ -412,15 +435,11 @@ public class FileUtil {
     /**
      * Converts a relative filename to an absolute one, if necessary.
      *
-     * @param fileName the filename (e.g., a .pdf file), may contain path separators
+     * @param fileName  the filename (e.g., a .pdf file), may contain path separators
      * @param directory the directory which should be search starting point
-     *
      * @return an empty optional if the file does not exist, otherwise, the absolute path
      */
-    public static Optional<Path> find(String fileName, Path directory) {
-        Objects.requireNonNull(fileName);
-        Objects.requireNonNull(directory);
-
+    public static Optional<Path> find(@NonNull String fileName, @NonNull Path directory) {
         if (detectBadFileName(fileName)) {
             LOGGER.error("Invalid characters in path for file {}", fileName);
             return Optional.empty();
@@ -506,10 +525,9 @@ public class FileUtil {
     /**
      * Detect illegal characters in given filename.
      *
-     * @see org.jabref.logic.util.io.FileNameCleaner#cleanFileName
-     *
      * @param fileName the fileName to detect
      * @return Boolean whether there is an illegal name.
+     * @see org.jabref.logic.util.io.FileNameCleaner#cleanFileName
      */
     public static boolean detectBadFileName(String fileName) {
         // fileName could be a path, we want to check the fileName only (and don't care about the path)
@@ -517,7 +535,7 @@ public class FileUtil {
         //         but a perfectly legal one in the path at this position
         try {
             fileName = Path.of(fileName).getFileName().toString();
-        } catch (InvalidPathException e) {
+        } catch (InvalidPathException _) {
             // in case the internal method cannot parse the path, it is surely illegal
             return true;
         }
@@ -581,12 +599,56 @@ public class FileUtil {
         numCharsAfterEllipsis = Math.min(numCharsAfterEllipsis, name.length() - numCharsBeforeEllipsis);
 
         return name.substring(0, numCharsBeforeEllipsis) +
-               ELLIPSIS +
-               name.substring(name.length() - numCharsAfterEllipsis) +
-               extension;
+                ELLIPSIS +
+                name.substring(name.length() - numCharsAfterEllipsis) +
+                extension;
     }
 
     public static boolean isCharLegal(char c) {
         return Arrays.binarySearch(ILLEGAL_CHARS, c) < 0;
+    }
+
+    /// Converts a Cygwin-style file path to a Windows-style path if the operating system is Windows.
+    ///
+    /// Supported formats:
+    /// - /cygdrive/c/Users/... → C:\Users\...
+    /// - /mnt/c/Users/...      → C:\Users\...
+    /// - /c/Users/...          → C:\Users\...
+    ///
+    /// @param filePath the input file path
+    /// @return the converted path if running on Windows and path is in Cygwin format; otherwise, returns the original path
+    public static Path convertCygwinPathToWindows(String filePath) {
+        if (filePath == null) {
+            return null;
+        }
+
+        if (!OS.WINDOWS) {
+            return Path.of(filePath);
+        }
+
+        if (filePath.startsWith(MNT_PREFIX) && filePath.length() > 5) {
+            return buildWindowsPathWithDriveLetterIndex(filePath, 5);
+        }
+
+        if (filePath.startsWith(CYGDRIVE_PREFIX) && filePath.length() > 10) {
+            return buildWindowsPathWithDriveLetterIndex(filePath, 10);
+        }
+
+        if (ROOT_DRIVE_PATTERN.matcher(filePath).matches()) {
+            return buildWindowsPathWithDriveLetterIndex(filePath, 1);
+        }
+
+        return Path.of(filePath);
+    }
+
+    /// Builds a Windows-style path from a Cygwin-style path using a known prefix index.
+    ///
+    /// @param path        the input file path
+    /// @param letterIndex the index driver letter, zero-based indexing
+    /// @return a windows-style path
+    private static Path buildWindowsPathWithDriveLetterIndex(String path, int letterIndex) {
+        String driveLetter = path.substring(letterIndex, letterIndex + 1).toUpperCase();
+        String windowsPath = path.substring(letterIndex + 1).replace("/", "\\\\");
+        return Path.of(driveLetter + ":" + windowsPath);
     }
 }
